<?xml version="1.0"?>
<package format="2">
  <name>dvrk_teleop_interface</name>
  <version>1.0.0</version>
  <description>Node that interfaces between raw DVRK and a generic teleop interface</description>
  <maintainer email="olivefi@ethz.ch">Oliver Fischer</maintainer>
  <license>Proprietary</license>
  <author email="olivefi@ethz.ch">Oliver Fischer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>any_node</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>dvrk_control</exec_depend>
  
  <test_depend>cmake_code_coverage</test_depend>
  <test_depend>gtest</test_depend>

</package>
